# url-eater

./: Cargo.toml  LICENSE.md  README.md  flake.nix
.github/workflows/: build_nix.yml
src/: config.rs  main.rs  tests.rs
