[package]
name = "url-eater"
version = "0.1.0"
edition = "2021"
authors = ["Agatha V. Lovelace <agatha@technogothic.net>"]
description = "Strip unneeded parameters from URLs copied to clipboard"
license = "NVPLv7+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
knuffel = "3.0.0"
memoize = { version = "0.4.0", features = ["full"] }
miette = { version = "5.7.0", features = ["fancy"] }
url = "2.3.1"
wildmatch = "2.1.1"
