[package]
name = "url-eater"
version = "0.2.0"
edition = "2021"
authors = ["Agatha V. Lovelace <agatha@technogothic.net>"]
description = "Strip unneeded parameters from URLs copied to clipboard"
license = "NVPLv7+"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.3.0", features = ["wayland-data-control"] }
knuffel = "3.0.0"
memoize = { version = "0.4.0", features = ["full"] }
miette = { version = "5.7.0", features = ["fancy"] }
url = "2.3.1"
wildmatch = "2.1.1"
